﻿Bersion 2.3.4

- Add option toggle for confirmation of bulldozing RICO ploppables
- Add option toggle for auto-demolition of RICO ploppables (e.g. by building roads or other buildings)
- Improve update notifications (thanks, macsergey!)


Version 2.3.3

- Attempt fix for game not correctly reporting ILoading.currentMode as AppMode.game
- Add rs translation


Version 2.3.2

- Fix for author RICO settings files with _Data postfix but no package prefix
- Add nl translation
- Update fr translation


Version 2.3.1

- RICO ploppable complaints checkboxes now set when 'All RICO' checkboxes are set
- Clarify text labels for growable options
- Adjust thumbnail rendering angle
- Cleanup legacy code remnants


Version 2.3

- Add 'Instant plopping' option for growables
- Add 'Disable zone check' option for growables
- Add 'Disable district specialization check' option for growables
- Add 'Ignore low land value complaint' option
- Add 'Ignore too few services complaint' option
- Add 'Make plopped buildings historical' option
- Current building selection (if any) is now pre-selected when opening settings panel
- Double-clicking on a building button directly opens settings panel for that building
- Building icons in ploppable panel now sorted by display name
- Transition to on-demand thumbnail generation
- Add submesh and sub-building rendering to preview images
- Tweak thumbnail lighting and angles slightly
- Fix building selection not updating when info panel button pressed
- Add BuildingLoaded Harmony Postfix patch to attempt to catch and reset and RICO residentials with zero CitizenUnits
- Stop attempting to remove existing (non-RICO) building UI buttons on game load
- Remove existing (non-RICO) building UI buttons (if any) when settings are applied live
- Add de, es, fr, jp, ru, tr, pl translations


Version 2.2.3

- Add additional public method calls for interfacing with other mods
- Move all inter-mod public methods to new Interfaces class
- Update translation framework